# zebra

./: .codespellrc  .dockerignore  .firebaserc  .gitattributes  .gitignore  .lychee.toml  .otelcol-builder.yaml  .release-plz.toml  .rustfmt.toml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  Makefile  NU6.3-IRONWOOD-PLAN.md  P2P_OPTIMIZATION_HANDOFF.md  PLAN.md  PR.md  README.md  SECURITY.md  blog_post_summary.md  cliff.toml  clippy.toml  cloudbuild-cd.yaml  cloudbuild-test.yaml  cloudbuild-unifed.yaml  cloudbuild.yaml  codecov.yml  data-flow.md  deny.toml  firebase.json  flake.nix  garnix.yaml  gustavovalverde_prs_summary.md  health-test.toml  (+14 more)
cargo-seamare/: Cargo.toml
cargo-seamare/src/: lint_engine.rs  main.rs
deploy/watchdog/: Cargo.toml  README.md  sync-check.sh
stolon/: Cargo.toml  testnet-tx
stolon/src/: lib.rs  main.rs
tachyon/: Cargo.toml  README.md
tachyon/src/: accumulator.rs  action.rs  address.rs  bundle.rs  keys.rs  lib.rs  note.rs  primitives.rs  tachygram.rs  value.rs
tower-batch/: Cargo.toml
tower-batch-control/: CHANGELOG.md  Cargo.toml  LICENSE
tower-batch-control/src/: layer.rs  lib.rs  message.rs  service.rs  worker.rs
tower-batch-control/tests/: ed25519.rs  worker.rs
tower-batch/src/: error.rs  future.rs  layer.rs  lib.rs  message.rs  semaphore.rs  service.rs  worker.rs
tower-batch/tests/: ed25519.rs  worker.rs
tower-fair-buffer/: CHANGELOG.md  Cargo.toml
tower-fair-buffer/src/: counts.rs  error.rs  future.rs  layer.rs  lib.rs  message.rs  queue.rs  service.rs  tagged.rs  worker.rs
tower-fair-buffer/tests/: fairness.rs  worker.rs
tower-fallback/: CHANGELOG.md  Cargo.toml
tower-fallback/src/: future.rs  lib.rs  service.rs
tower-fallback/tests/: fallback.rs
zebra-chain/: CHANGELOG.md  Cargo.toml  build.rs
zebra-chain/benches/: block.rs  redpallas.rs  sapling.rs  transaction.rs
zebra-chain/proptest-regressions/: serialization.txt  types.txt
zebra-chain/src/: addresses.rs  amount.rs  best_tip_height.rs  block.rs  block_data.rs  block_info.rs  chain_sync_status.rs  chain_tip.rs  commitments.rs  common.rs  crosslink.rs  diagnostic.rs  equihash.rs  equihash_solution.rs  error.rs  fmt.rs  history_tree.rs  ironwood.rs  keys.rs  lib.rs  local_genesis.rs  merkle_tree.rs  mmr.rs  network.rs  note_commitment_tree.rs  note_encryption.rs  notes.rs  nullifier.rs  orchard.rs  orchard_zsa.rs  parallel.rs  parameters.rs  primitives.rs  proofs.rs  sapling.rs  serde_helpers.rs  serialization.rs  sha256d_writer.rs  shutdown.rs  sprout.rs  (+12 more)
zebra-cli/: Cargo.toml  README.md
zebra-cli/src/: application.rs  commands.rs  config.rs  lib.rs  main.rs
zebra-cli/tests/: acceptance.rs
zebra-consensus/: CHANGELOG.md  Cargo.toml
zebra-consensus/benches/: common.rs  groth16.rs  halo2.rs  sapling.rs
zebra-consensus/examples/: download-params.rs  get-params-path.rs
zebra-consensus/src/: block.rs  chain.rs  checkpoint.rs  checkpoints.rs  config.rs  error.rs  errors.rs  lib.rs  mempool.rs  parameters.rs  primitives.rs  router.rs  script.rs  service_trait.rs  tests.rs  transaction.rs  utils.rs  verify.rs  zsa.rs
zebra-grpc/: CHANGELOG.md  Cargo.toml  build.rs
zebra-grpc/proto/: scanner.proto  service.proto
zebra-grpc/src/: auth.rs  init.rs  lib.rs  methods.rs  server.rs  tests.rs
zebra-jsonl-trace/: Cargo.toml
zebra-jsonl-trace/src/: lib.rs
zebra-network/: CHANGELOG.md  Cargo.toml  LICENSE
zebra-network/benches/: zakura_loadgen.rs  zakura_single_conn.rs
zebra-network/src/: address_book.rs  address_book_peers.rs  address_book_service.rs  address_book_updater.rs  config.rs  constants.rs  isolated.rs  lib.rs  message.rs  meta_addr.rs  metrics.rs  network.rs  peer.rs  peer_cache_updater.rs  peer_observer.rs  peer_set.rs  policies.rs  protocol.rs  serialization.rs  timestamp_collector.rs  types.rs  zakura.rs
zebra-network/tests/: acceptance.rs
zebra-node-services/: CHANGELOG.md  Cargo.toml
zebra-node-services/src/: constants.rs  lib.rs  mempool.rs  rpc_client.rs  scan_service.rs  service_traits.rs
zebra-rpc/: CHANGELOG.md  Cargo.toml  build.rs  rpc-diff.sh  zallet_openrpc_schema.json  zebra_openrpc_schema.json
zebra-rpc/proto/: endpoint.proto  indexer.proto
zebra-rpc/qa/: CHANGELOG.md  README.md  base_config.toml  zindexer.toml
zebra-rpc/src/: client.rs  config.rs  constants.rs  datacake_rpc.rs  errors.rs  indexer.rs  lib.rs  methods.rs  queue.rs  rpc.rs  server.rs  sync.rs  tests.rs
zebra-rpc/tests/: serialization_tests.rs
zebra-scan/: CHANGELOG.md  Cargo.toml
zebra-scan/src/: config.rs  init.rs  lib.rs  scan.rs  service.rs  storage.rs  tests.rs
zebra-scan/tests/: scan_task_commands.rs  scanner.rs
zebra-scanner/: Cargo.toml
zebra-scanner/src/: lib.rs  tests.rs
zebra-script/: CHANGELOG.md  Cargo.toml  build.rs
zebra-script/cxx-src/: zcashconsensus.h
zebra-script/src/: lib.rs  tests.rs
zebra-state/: CHANGELOG.md  Cargo.toml  build.rs
zebra-state/src/: arbitrary.rs  config.rs  constants.rs  error.rs  in_memory.rs  lib.rs  memory_state.rs  on_disk.rs  request.rs  response.rs  service.rs  service_interface.rs  service_traits.rs  sled_state.rs  tests.rs  util.rs  utxo.rs
zebra-state/tests/: basic.rs  zsa.rs
zebra-test/: CHANGELOG.md  Cargo.toml
zebra-test/scripts/: shutdown-errors
zebra-test/src/: command.rs  lib.rs  mock_service.rs  net.rs  network_addr.rs  prelude.rs  service_extensions.rs  transcript.rs  vectors.rs  zip0143.rs  zip0243.rs  zip0244.rs
zebra-test/tests/: command.rs  transcript.rs
zebra-utils/: CHANGELOG.md  Cargo.toml  README.md  calculate-checkpoints.sh  check-api  coverage  get-height-size-hash.sh  zcash-rpc-block-template-to-proposal  zcash-rpc-diff  zebrad-hash-lookup  zebrad-log-filter
zebra-utils/src/: lib.rs
zebra-utils/tests/: build_utils_for_zebrad_tests.rs
zebrad/: Cargo.toml  README.md  build.rs  zcashd-compat-manifest.json
zebrad/debian/: zebrad.service
zebrad/nix/: zebrad.nix
zebrad/src/: abscissa_tokio.rs  application.rs  async_ext.rs  commands.rs  components.rs  (+6 more)
(+2273 files in other folders)
