[workspace]
members = [
        "zebrad",
        "zebra-chain",
        "zebra-network",
        "zebra-state",
        "zebra-script",
        "zebra-consensus",
        "zebra-rpc",
        "zebra-node-services",
        "zebra-test",
        "zebra-utils",
        "zebra-scan",
	"zebra-grpc",
        "tower-batch-control",
        "tower-fallback",
]

# Use the edition 2021 dependency resolver in the workspace, to match the crates
resolver = "2"

# `cargo release` settings

[workspace.dependencies]
incrementalmerkletree = { version = "0.5.1", features = ["legacy-api"] }
orchard = "0.11.0"
sapling-crypto = "0.5.0"
# The dependency versions below are in accordance with the currently used orchard version.
zcash_history = "0.4.0"
zcash_address = "0.8.0"
zcash_client_backend = "0.19.0"
zcash_encoding = "0.3.0"
zcash_keys = "0.9.0"
zcash_primitives = "0.23.0"
zcash_proofs = "0.23.0"
zcash_protocol = "0.5.3"
zcash_transparent = { version = "0.3.0", features = ["transparent-inputs"] }

[workspace.metadata.release]

# We always do releases from the main branch
allow-branch = ["main"]

# Compilation settings

[profile.dev]
panic = "abort"

# Speed up tests by optimizing performance-critical crates

# Cryptographic crates

[profile.dev.package.blake2b_simd]
opt-level = 3

[profile.dev.package.ff]
opt-level = 3

[profile.dev.package.group]
opt-level = 3

[profile.dev.package.pasta_curves]
opt-level = 3

[profile.dev.package.halo2_proofs]
opt-level = 3

[profile.dev.package.halo2_gadgets]
opt-level = 3

[profile.dev.package.bls12_381]
opt-level = 3

[profile.dev.package.byteorder]
opt-level = 3

[profile.dev.package.equihash]
opt-level = 3

[profile.dev.package.zcash_proofs]
opt-level = 3

[profile.dev.package.ring]
opt-level = 3

[profile.dev.package.spin]
opt-level = 3

[profile.dev.package.untrusted]
opt-level = 3


[profile.release]
panic = "abort"

# Speed up release builds and sync tests using link-time optimization.
# Some of Zebra's code is CPU-intensive, and needs extra optimizations for peak performance.
#
# TODO:
# - add "-Clinker-plugin-lto" in .cargo/config.toml to speed up release builds
#     - add "-Clinker=clang -Clink-arg=-fuse-ld=lld" in .cargo/config.toml
# - also use LTO on C/C++ code:
#     - use clang to compile all C/C++ code
#     - add "-flto=thin" to all C/C++ code builds
#     - see https://doc.rust-lang.org/rustc/linker-plugin-lto.html#cc-code-as-a-dependency-in-rust
lto = "thin"

[patch.crates-io]
halo2_proofs = { version = "0.3.0", git = "https://github.com/QED-it/halo2", branch = "zsa1" }
halo2_gadgets = { version = "0.3.0", git = "https://github.com/QED-it/halo2", branch = "zsa1" }
orchard = { git = "https://github.com/QED-it/orchard", branch = "zsa_swap" }
sapling-crypto = { git = "https://github.com/QED-it/sapling-crypto", rev = "b0d2e4c1139f23fb7e9e410f2e5d986d5662ee03" }
zcash_note_encryption = { version = "0.4.1", git = "https://github.com/zcash/zcash_note_encryption", rev = "668ea44cf59a226715a5f3cb1bf88710a8c188a3" }
zcash_primitives = { git = "https://github.com/QED-it/librustzcash", branch = "zsa-swap" }
zcash_protocol = { git = "https://github.com/QED-it/librustzcash", branch = "zsa-swap" }
zcash_address = { git = "https://github.com/QED-it/librustzcash", branch = "zsa-swap" }
zcash_client_backend = { git = "https://github.com/QED-it/librustzcash", branch = "zsa-swap" }
zcash_proofs = { git = "https://github.com/QED-it/librustzcash", branch = "zsa-swap" }
zcash_encoding = { git = "https://github.com/QED-it/librustzcash", branch = "zsa-swap" }
zcash_transparent = { git = "https://github.com/QED-it/librustzcash", branch = "zsa-swap" }
