[workspace]
members = [
        "zebrad",
        "zebra-chain",
        "zebra-network",
        "zebra-state",
        "zebra-script",
        "zebra-consensus",
        "zebra-rpc",
        "zebra-node-services",
        "zebra-test",
        "zebra-utils",
        "zebra-scan",
	    "zebra-grpc",
        "tower-batch-control",
        "tower-fallback",
]

# Use the edition 2021 dependency resolver in the workspace, to match the crates
resolver = "2"

# `cargo release` settings

[workspace.dependencies]
incrementalmerkletree = "0.8.2"
orchard = "0.11.0"
sapling-crypto = "0.5"
# The dependency versions below are in accordance with the currently used orchard version.
zcash_history = "0.4.0"
zcash_address = "0.9.0"
zcash_client_backend = "0.20.0"
zcash_encoding = "0.3.0"
zcash_keys = "0.11.0"
zcash_primitives = "0.25.0"
zcash_proofs = "0.25.0"
zcash_protocol = "0.6.2"
zcash_transparent = "0.5.0"
zcash_script = "0.4"

[workspace.metadata.release]

# We always do releases from the main branch
allow-branch = ["main"]

# Compilation settings

[profile.dev]
panic = "abort"

# Speed up tests by optimizing performance-critical crates

# Cryptographic crates

[profile.dev.package.blake2b_simd]
opt-level = 3

[profile.dev.package.ff]
opt-level = 3

[profile.dev.package.group]
opt-level = 3

[profile.dev.package.pasta_curves]
opt-level = 3

[profile.dev.package.halo2_proofs]
opt-level = 3

[profile.dev.package.halo2_gadgets]
opt-level = 3

[profile.dev.package.bls12_381]
opt-level = 3

[profile.dev.package.byteorder]
opt-level = 3

[profile.dev.package.equihash]
opt-level = 3

[profile.dev.package.zcash_proofs]
opt-level = 3

[profile.dev.package.ring]
opt-level = 3

[profile.dev.package.spin]
opt-level = 3

[profile.dev.package.untrusted]
opt-level = 3


[profile.release]
panic = "abort"

# Speed up release builds and sync tests using link-time optimization.
# Some of Zebra's code is CPU-intensive, and needs extra optimizations for peak performance.
#
# TODO:
# - add "-Clinker-plugin-lto" in .cargo/config.toml to speed up release builds
#     - add "-Clinker=clang -Clink-arg=-fuse-ld=lld" in .cargo/config.toml
# - also use LTO on C/C++ code:
#     - use clang to compile all C/C++ code
#     - add "-flto=thin" to all C/C++ code builds
#     - see https://doc.rust-lang.org/rustc/linker-plugin-lto.html#cc-code-as-a-dependency-in-rust
lto = "thin"

[patch.crates-io]
halo2_proofs = { git = "https://github.com/QED-it/halo2", rev = "2308caf68c48c02468b66cfc452dad54e355e32f" }
halo2_gadgets = { git = "https://github.com/QED-it/halo2", rev = "2308caf68c48c02468b66cfc452dad54e355e32f" }
halo2_poseidon = { git = "https://github.com/QED-it/halo2", rev = "2308caf68c48c02468b66cfc452dad54e355e32f" }
zcash_note_encryption = { git = "https://github.com/zcash/zcash_note_encryption", rev = "9f7e93d42cef839d02b9d75918117941d453f8cb" }
sapling-crypto = { package = "sapling-crypto", git = "https://github.com/QED-it/sapling-crypto", rev = "9393f93fe547d1b3738c9f4618c0f8a2fffed29f" }
orchard = { git = "https://github.com/QED-it/orchard", rev = "f6d87925c6ad32675790b828736f7321f85ecfe8" }
zcash_primitives = { git = "https://github.com/QED-it/librustzcash", rev = "dfdf4f742bee24e763f6950619f40d2dbac83e27" }
zcash_protocol = { git = "https://github.com/QED-it/librustzcash", rev = "dfdf4f742bee24e763f6950619f40d2dbac83e27" }
zcash_address = { git = "https://github.com/QED-it/librustzcash", rev = "dfdf4f742bee24e763f6950619f40d2dbac83e27" }
zcash_encoding = { git = "https://github.com/QED-it/librustzcash", rev = "dfdf4f742bee24e763f6950619f40d2dbac83e27" }
zcash_history = { git = "https://github.com/QED-it/librustzcash", rev = "dfdf4f742bee24e763f6950619f40d2dbac83e27" }
zcash_client_backend = { git = "https://github.com/QED-it/librustzcash", rev = "dfdf4f742bee24e763f6950619f40d2dbac83e27" }
zcash_keys = { git = "https://github.com/QED-it/librustzcash", rev = "dfdf4f742bee24e763f6950619f40d2dbac83e27" }
zcash_transparent = { git = "https://github.com/QED-it/librustzcash", rev = "dfdf4f742bee24e763f6950619f40d2dbac83e27" }
zcash_proofs = { git = "https://github.com/QED-it/librustzcash", rev = "dfdf4f742bee24e763f6950619f40d2dbac83e27" }
equihash = { git = "https://github.com/QED-it/librustzcash", rev = "dfdf4f742bee24e763f6950619f40d2dbac83e27" }
sinsemilla = { git = "https://github.com/zcash/sinsemilla", rev = "aabb707e862bc3d7b803c77d14e5a771bcee3e8c" }
