[package]
name = "cargo-seamare"
version = "0.1.0"
authors = ["Zcash Foundation <zebra@zfnd.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
seamare = { path = "../seamare" }
seamare-lints = { path = "../seamare-lints" }
guppy = "0.8.0"
camino = "1.0.3"
