[package]
name = "stolon"
version = "0.1.0"
authors = ["Zcash Foundation <zebra@zfnd.org>"]
license = "MIT OR Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zebra-chain = { path = "../zebra-chain" }
zebra-network = { path = "../zebra-network" }

tokio = { version = "0.2.22", features = ["full"] }
tokio-socks = { version = "0.3", features = ["tor"] }
tower = "0.3"
futures = "0.3"

tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"

structopt = "0.3"
rand = "0.7"