[package]
name = "tachyon"
version = "0.0.0"
edition = "2024"
rust-version = "1.90.0"
description = "The Tachyon shielded transaction protocol (stub)"
readme = "README.md"
categories = ["cryptography::cryptocurrencies"]
keywords = ["zcash", "tachyon"]

[dependencies]
serde = { workspace = true }
core2 = { version = "0.3", default-features = false, features = ["alloc"] }

# Cryptographic primitives
ff = { version = "0.13", default-features = false }
group = { version = "0.13", default-features = false }
pasta_curves = "0.5.1"

# Ragu proof system
ragu = { path = "../../../ragu" }
ragu_pasta = { path = "../../../ragu/crates/ragu_pasta" }

[dev-dependencies]
proptest = { workspace = true }

[lib]
bench = false

[features]
default = ["std"]
std = ["core2/std"]
