[package]
name = "tower-batch-control"
version = "0.2.41-beta.18"
authors = ["Zcash Foundation <zebra@zfnd.org>", "Tower Maintainers <team@tower-rs.com>"]
description = "Tower middleware for batch request processing"
# # Legal
#
# This licence is deliberately different to the rest of Zebra.
#
# This code was modified from a 2019 version of:
# https://github.com/tower-rs/tower/tree/master/tower/src/buffer
license = "MIT"
repository = "https://github.com/ZcashFoundation/zebra"
edition = "2021"

# TODO: decide if we want to use the Zebra readme and home page
#readme = "../README.md"
#homepage = "https://zfnd.org/zebra/"
# crates.io is limited to 5 keywords and categories
keywords = ["tower", "batch"]
# Must be one of <https://crates.io/category_slugs>
categories = ["algorithms", "asynchronous"]

[dependencies]
futures = "0.3.31"
futures-core = "0.3.28"
pin-project = "1.1.6"
rayon = "1.10.0"
tokio = { version = "1.41.1", features = ["time", "sync", "tracing", "macros"] }
tokio-util = "0.7.12"
tower = { version = "0.5.1", features = ["util", "buffer"] }
tracing = "0.1.41"
tracing-futures = "0.2.5"

[dev-dependencies]
color-eyre = "0.6.3"
# This is a transitive dependency via color-eyre.
# Enable a feature that makes tinyvec compile much faster.
tinyvec = { version = "1.8.0", features = ["rustc_1_55"] }

ed25519-zebra = "4.0.3"
rand = "0.8.5"

tokio = { version = "1.41.1", features = ["full", "tracing", "test-util"] }
tokio-test = "0.4.4"
tower-fallback = { path = "../tower-fallback/", version = "0.2.41-beta.18" }
tower-test = "0.4.0"

zebra-test = { path = "../zebra-test/", version = "1.0.0-beta.42" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tokio_unstable)'] }
