[package]
name = "tower-batch-control"
version = "0.2.41"
authors = ["Zcash Foundation <zebra@zfnd.org>", "Tower Maintainers <team@tower-rs.com>"]
description = "Tower middleware for batch request processing"
# # Legal
#
# This licence is deliberately different to the rest of Zebra.
#
# This code was modified from a 2019 version of:
# https://github.com/tower-rs/tower/tree/master/tower/src/buffer
license = "MIT"
repository = "https://github.com/ZcashFoundation/zebra"
edition = "2021"

# TODO: decide if we want to use the Zebra readme and home page
#readme = "../README.md"
#homepage = "https://zfnd.org/zebra/"
# crates.io is limited to 5 keywords and categories
keywords = ["tower", "batch"]
# Must be one of <https://crates.io/category_slugs>
categories = ["algorithms", "asynchronous"]

[dependencies]
futures = { workspace = true }
futures-core = { workspace = true }
pin-project = { workspace = true }
rayon = { workspace = true }
tokio = { workspace = true, features = ["time", "sync", "tracing", "macros"] }
tokio-util = { workspace = true }
tower = { workspace = true, features = ["util", "buffer"] }
tracing = { workspace = true }
tracing-futures = { workspace = true }

[dev-dependencies]
color-eyre = { workspace = true }
# This is a transitive dependency via color-eyre.
# Enable a feature that makes tinyvec compile much faster.
tinyvec = { workspace = true, features = ["rustc_1_55"] }

ed25519-zebra = { workspace = true }
rand = { workspace = true }

tokio = { workspace = true, features = ["full", "tracing", "test-util"] }
tokio-test = { workspace = true }
tower-fallback = { path = "../tower-fallback/", version = "0.2.41" }
tower-test = { workspace = true }

zebra-test = { path = "../zebra-test/", version = "1.0.0" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tokio_unstable)'] }
