[package]
name = "tower-batch"
version = "0.2.35"
authors = ["Zcash Foundation <zebra@zfnd.org>"]
license = "MIT"
edition = "2021"

[dependencies]
futures = "0.3.26"
futures-core = "0.3.26"
pin-project = "1.0.12"
rayon = "1.6.1"
tokio = { version = "1.25.0", features = ["time", "sync", "tracing", "macros"] }
tokio-util = "0.7.4"
tower = { version = "0.4.13", features = ["util", "buffer"] }
tracing = "0.1.37"
tracing-futures = "0.2.5"

[dev-dependencies]
color-eyre = "0.6.2"
# This is a transitive dependency via color-eyre.
# Enable a feature that makes tinyvec compile much faster.
tinyvec = { version = "1.6.0", features = ["rustc_1_55"] }

ed25519-zebra = "3.1.0"
rand = { version = "0.8.5", package = "rand" }

tokio = { version = "1.25.0", features = ["full", "tracing", "test-util"] }
tokio-test = "0.4.2"
tower-fallback = { path = "../tower-fallback/" }
tower-test = "0.4.0"

zebra-consensus = { path = "../zebra-consensus/" }
zebra-test = { path = "../zebra-test/" }
