[package]
name = "tower-fallback"
version = "0.2.40"
authors = ["Zcash Foundation <zebra@zfnd.org>"]
description = "A Tower service combinator that sends requests to a first service, then retries processing on a second fallback service if the first service errors."
license = "MIT OR Apache-2.0"
repository = "https://github.com/ZcashFoundation/zebra"
edition = "2021"

[dependencies]
pin-project = "1.1.0"
tower = "0.4.13"
futures-core = "0.3.28"
tracing = "0.1.37"

[dev-dependencies]
tokio = { version = "1.28.2", features = ["full", "tracing", "test-util"] }

zebra-test = { path = "../zebra-test/" }
