[package]
name = "zebra-chain"
version = "1.0.0-beta.45"
authors = ["Zcash Foundation <zebra@zfnd.org>"]
description = "Core Zcash data structures"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ZcashFoundation/zebra"
edition = "2021"

readme = "../README.md"
homepage = "https://zfnd.org/zebra/"
# crates.io is limited to 5 keywords and categories
keywords = ["zebra", "zcash"]
# Must be one of <https://crates.io/category_slugs>
categories = ["asynchronous", "cryptography::cryptocurrencies", "encoding"]

[features]
default = []

# Production features that activate extra functionality

# Consensus-critical conversion from JSON to Zcash types
json-conversion = [
    "serde_json",
]

# Async error handling convenience traits
async-error = [
    "tokio",
]

# Mining RPC support
getblocktemplate-rpcs = [
]

# Experimental shielded scanning support
shielded-scan = [
    "zcash_client_backend"
]

# Experimental internal miner support
# TODO: Internal miner feature functionality was removed at https://github.com/ZcashFoundation/zebra/issues/8180
#       See what was removed at https://github.com/ZcashFoundation/zebra/blob/v1.5.1/zebra-chain/Cargo.toml#L38-L43
#       Restore support when conditions are met. https://github.com/ZcashFoundation/zebra/issues/8183
internal-miner = []

# Experimental elasticsearch support
elasticsearch = []

# Test-only features

proptest-impl = [
    "proptest",
    "proptest-derive",
    "rand",
    "rand_chacha",
    "tokio/tracing",
    "zebra-test",
]

bench = ["zebra-test"]

tx_v6 = []

[dependencies]

# Cryptography
bitvec = { workspace = true }
bitflags = { workspace = true }
bitflags-serde-legacy = { workspace = true }
blake2b_simd = { workspace = true }
blake2s_simd = { workspace = true }
bs58 = { workspace = true, features = ["check"] }
byteorder = { workspace = true }

# TODO: Internal miner feature functionality was removed at https://github.com/ZcashFoundation/zebra/issues/8180
#       See what was removed at https://github.com/ZcashFoundation/zebra/blob/v1.5.1/zebra-chain/Cargo.toml#L73-L85
#       Restore support when conditions are met. https://github.com/ZcashFoundation/zebra/issues/8183
equihash = { workspace = true }

group = { workspace = true }
incrementalmerkletree.workspace = true
jubjub = { workspace = true }
lazy_static = { workspace = true }
tempfile = { workspace = true }
dirs = { workspace = true }
num-integer = { workspace = true }
primitive-types = { workspace = true }
rand_core = { workspace = true }
ripemd = { workspace = true }
# Matches version used by hdwallet
secp256k1 = { workspace = true, features = ["serde"] }
sha2 = { workspace = true, features = ["compress"] }
uint = { workspace = true }
x25519-dalek = { workspace = true, features = ["serde"] }

# ECC deps
halo2 = { package = "halo2_proofs", version = "0.3.0" }
orchard.workspace = true
zcash_encoding.workspace = true
zcash_history.workspace = true
zcash_note_encryption = { workspace = true }
zcash_primitives = { workspace = true, features = ["transparent-inputs"] }
sapling-crypto.workspace = true
zcash_protocol.workspace = true
zcash_address.workspace = true
zcash_transparent.workspace = true

# Time
chrono = { workspace = true, features = ["clock", "std", "serde"] }
humantime = { workspace = true }

# Error Handling & Formatting
static_assertions = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Serialization
hex = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["serde_derive", "rc"] }
serde_with = { workspace = true }
serde-big-array = { workspace = true }

# Processing
futures = { workspace = true }
itertools = { workspace = true }
rayon = { workspace = true }

# ZF deps
ed25519-zebra = { workspace = true }
redjubjub = { workspace = true }
reddsa = { workspace = true }

# Production feature json-conversion
serde_json = { workspace = true, optional = true }

# Production feature async-error and testing feature proptest-impl
tokio = { workspace = true, optional = true }

# Experimental feature shielded-scan
zcash_client_backend = { workspace = true, optional = true }

# Optional testing dependencies
proptest = { workspace = true, optional = true }
proptest-derive = { workspace = true, optional = true }

rand = { workspace = true, optional = true }
rand_chacha = { workspace = true, optional = true }

zebra-test = { path = "../zebra-test/", version = "1.0.0-beta.45", optional = true }

[dev-dependencies]
# Benchmarks
criterion = { workspace = true, features = ["html_reports"] }

# Error Handling & Formatting
color-eyre = { workspace = true }
# This is a transitive dependency via color-eyre.
# Enable a feature that makes tinyvec compile much faster.
tinyvec = { workspace = true, features = ["rustc_1_55"] }
spandoc = { workspace = true }
tracing = { workspace = true }

# Make the optional testing dependencies required
proptest = { workspace = true }
proptest-derive = { workspace = true }

rand = { workspace = true }
rand_chacha = { workspace = true }

tokio = { workspace = true, features = ["full", "tracing", "test-util"] }

zebra-test = { path = "../zebra-test/", version = "1.0.0-beta.45" }

[[bench]]
name = "block"
harness = false
required-features = ["bench"]

[[bench]]
name = "redpallas"
harness = false
